--- a/.github/workflows/dotnet-core-cicd.yml
+++ b/.github/workflows/dotnet-core-cicd.yml
@@ -17,7 +17,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: 'hsirtl-github-lab'
   AZURE_WEBAPP_PACKAGE_PATH: '.'
-  DOTNET_VERSION: '2.2.402'
+  DOTNET_VERSION: '3.1.x'
 
 jobs:
   build-and-deploy:
