--- a/.github/workflows/dotnet-core-cicd.yml
+++ b/.github/workflows/dotnet-core-cicd.yml
@@ -23,7 +23,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-
       # Checkout the repo
       - uses: actions/checkout@master
       
@@ -50,12 +49,22 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: my-little-webapp
-          path: /home/runner/work/my-little-webapp/my-little-webapp/my-little-webapp/
-          
+          path: /home/runner/work/my-little-webapp/my-little-webapp/my-little-webapp/     
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v2
+        with:
+          name: my-little-webapp
+    
+      - name: Display structure of downloaded files
+        run: ls -R
+        
       # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'
         uses: azure/webapps-deploy@v2
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE  }}
-          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
+          package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/my-little-webapp'
