--- a/.github/workflows/dotnet-core-cicd.yml
+++ b/.github/workflows/dotnet-core-cicd.yml
@@ -58,6 +58,7 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: my-little-webapp
+          path: my-little-webapp 
     
       - name: Display structure of downloaded files
         run: ls -R
